@@ -11,6 +11,10 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-31
+2015-7-7 David Schneider
+- add function to get calib data dir for testing
+
 Tag: V00-08-30
 2015-6-26 David Schneider
 - update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166
